--- a/aboutus.css
+++ b/aboutus.css
@@ -47,11 +47,68 @@ html,body{
     color: white;
 }
 #section4 {
-    min-height: 100vh;
+    min-height: 85vh;
     width: 100%;
     background:rgb(26,26,26);
     background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: start;
+}
+/* footer */
+#footer{
+    height: 15vh;
+    width: 100%;
+    padding: 0.5% 6%; 
+    background-color: rgb(26,26,26);
+    display: flex;
+    align-items: center;
+}
+.upperFooter{
+height: 80%;
+width: 100%;
+display: flex;
+    justify-content: space-around;
+}
+.lowerFooter{
+    height: 20%;
+    width: 100%;
+    /* border-top: 1px solid white; */
+    color: #fff;
+    text-align: center;
+}
+.footerSections{
+    height: 100%;
+    width: 20%;
+    /* background-color: lightblue; */
+    /* border: 1px solid red; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: start;
+}
+.footerSections a{
+    text-decoration: none;
+}
+.footerSections h1{
+    color: white;
+    font-size: 1.5vw;
+    font-weight: lighter;
+    filter: drop-shadow(0px 0px 4px black) brightness(0.9);
+}
+.footerSections p{
+    color: white;
+    font-size: 0.9vw;
+    filter: brightness(0.9);
+
+}
+#socialLinks{
+    height: 30%;
+    width: 100%;
+    display: flex;
+    /* justify-content: center; */
+    gap: 3%;
+}
+#socialLinks a img{
+    height: 100%;
 }
