--- a/aboutus.css
+++ b/aboutus.css
@@ -62,7 +62,8 @@ html,body{
     padding: 0.5% 6%; 
     background-color: rgb(26,26,26);
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 .upperFooter{
 height: 80%;
