--- a/style.css
+++ b/style.css
@@ -1016,3 +1016,231 @@ img.carouselImgs {
     background: lightgreen;
     color: black;
 }
+
+
+/* Responsivness */
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+    #titleContainer {
+        font-size: 4vw !important;
+        width: unset !important;
+    }
+    #main h6 {
+        font-size: 1.3vw !important;
+    }
+    #section2 {
+        display: grid;
+        place-items: center;
+    }
+    #headingText h1 {
+        font-size: 6vw;
+    }
+    #contentText {
+        flex-direction: column;
+        align-items: center;
+        height: 35vh;
+        justify-content: space-between !important;
+        width: 90%;
+    }
+    #contentText p {
+        width: 60% !important;
+    }
+    #contentText p:first-child {
+        align-self: flex-start;
+        font-size: 3.5vw;
+        text-align: left;
+    }
+    #contentText p:last-child {
+        align-self: flex-end;
+        font-size: 2.5vw;
+        text-align: left;
+        color: rgb(44, 44, 44);
+    }
+    #contentText p:last-child button {
+        width: 70%;
+        /* margin-top: 100px; */
+    }
+    .contentLayer {
+        display: none;
+    }
+    .headingBgContainer {
+        width: 100%;
+    }
+    .webdBg {
+        background-position: center;
+    }
+    .headingBgContainer h1 {
+        font-size: 6vw;
+    }
+    .headingBgContainer p {
+        font-size: 3vw;
+    }
+    .headingBgContainer button {
+        font-size: 2vw;
+    }
+    .runCarouselButtons button {
+        width: 40px;
+        height: 40px;
+    }
+
+    #introPage {
+        display: grid;
+        place-items: center;
+    }
+    .text-div {
+        height: unset;
+    }
+    .element h1 {
+        font-size: 8vw;
+    }
+    #scroller h4 {
+        font-size: 8vw;
+    }
+    #contactUs {
+        flex-direction: column;
+        gap: 20px;
+    }
+    .contactParts {
+        width: 100%;
+        height: unset;
+    }
+    .contactParts:first-child {
+        font-size: 4.5vw;
+    }
+    .contactParts:last-child h2 {
+        text-align: center;
+    }
+}
+
+@media only screen and (min-width: 350px) and (max-width: 768px) {
+    #titleContainer {
+        font-size: 7vw !important;
+        width: unset !important;
+        flex-direction: column;
+        width: 80% !important;
+    }
+    #subTitle img {
+        width: 9vw;
+    }
+    #main p {
+        font-size: 4vw !important;
+        width: 100%;
+        white-space: nowrap;
+        margin-top: 50px;
+    }
+    #bgImage {
+        width: 100%;
+        height: 100% !important;
+        object-fit: cover;
+    }
+    #main h6 {
+        font-size: 1.3vw !important;
+    }
+    #section1 {
+        position: relative;
+        overflow: hidden;
+    }
+    #section1 video {
+        height: 100%;
+        width: unset !important;
+        position: absolute;
+    }
+    #section2 {
+        display: flex;
+        flex-direction: column;
+        place-items: center;
+    }
+    #headingText h1 {
+        font-size: 6vw;
+    }
+    #contentText {
+        flex-direction: column;
+        align-items: center;
+        height: 35vh;
+        justify-content: space-between !important;
+        width: 90%;
+    }
+    #contentText p {
+        width: 60% !important;
+    }
+    #contentText p:first-child {
+        align-self: flex-start;
+        font-size: 6.5vw;
+        text-align: left;
+    }
+    #contentText p:last-child {
+        align-self: flex-end;
+        font-size: 4.5vw;
+        text-align: left;
+        color: rgb(44, 44, 44);
+    }
+    #contentText p:last-child button {
+        width: 80%;
+        font-size: 3vw;
+        /* margin-top: 100px; */
+    }
+    .contentLayer {
+        display: none;
+    }
+    .headingBgContainer {
+        width: 100%;
+    }
+    .webdBg {
+        background-position: center;
+    }
+    .headingBgContainer h1 {
+        font-size: 10vw;
+    }
+    .headingBgContainer p {
+        font-size: 4vw;
+    }
+    .headingBgContainer button {
+        font-size: 4vw;
+    }
+    .runCarouselButtons button {
+        width: 40px;
+        height: 40px;
+    }
+    #nameTagOnTop {
+        font-size: 4vw;
+    }
+
+    #introPage {
+        display: grid;
+        place-items: center;
+    }
+    .text-div {
+        height: unset;
+    }
+    .element h1 {
+        font-size: 10vw;
+    }
+    #scroller h4 {
+        font-size: 18vw;
+    }
+    #contactUs {
+        flex-direction: column;
+        gap: 20px;
+        justify-content: center;
+    }
+    .contactParts {
+        width: 100%;
+        height: unset;
+    }
+    .contactParts span {
+        font-size: 6vw;
+    }
+    .contactParts:first-child {
+        font-size: 4.5vw;
+    }
+    .contactParts:last-child h2 {
+        text-align: center;
+        font-size: 6vw;
+    }
+    #section4 div h1 {
+        font-size: 15vw !important;
+    }
+    #section4 p {
+        font-size: 4vw !important;
+    }
+}
