--- a/aboutus.css
+++ b/aboutus.css
@@ -113,3 +113,36 @@ display: flex;
 #socialLinks a img{
     height: 100%;
 }
+
+@media only screen and (min-width: 350px) and (max-width: 1024px) { 
+    #section4 {
+        padding-top: 50px;
+    }
+    #section4 div h1 {
+        font-size: 15vw !important;
+    }
+    #section4 p {
+        font-size: 4vw !important;
+    }
+
+    #footer {
+        height: unset !important;
+    }
+    .upperFooter {
+        /* flex-direction: column; */
+        flex-wrap: wrap;
+    }
+    .footerSections {
+        min-width: 50%;
+        min-height: 50px;
+    }
+    .footerSections h1 {
+        font-size: 3.5vw;
+    }
+    #socialLinks a img {
+        height: 30px;
+    }
+    .footerSections p {
+        font-size: 2vw;
+    }
+}
